--- a/index.html
+++ b/index.html
@@ -4,10 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- font awesome -->
+    <link rel=“stylesheet” href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Copia Dropbox</title>
 </head>
 <body>
+
+    <!-- header con navbar fixed -->
+
+    <!-- jumbotron / dare position relatinve - creare un titolo e sotto 2 colonne float left-->
     
+    <!-- section / dare sempre position relative - creare titolo - 3 colonne dimensioni uguali - parte finale altro div larghezza intera diviso in 2 col -->
+
+    <!-- sezione a 2 col -->
+
+    <!-- sezione con titolo 2 righe a loro volta divise in 3 col -->
+
+    <!-- sezione  carousel-->
+
+    <!-- sezione 2 col -->
+
+    <!-- sezione accordion -->
+
+    <!-- footer -->
+
+
+
 </body>
 </html>
