--- a/index.html
+++ b/index.html
@@ -17,6 +17,28 @@
 <body>
 
     <!-- header con navbar fixed -->
+    <header>
+        <nav id="main-nav" class="clearfix">
+            <div class="nav-sx">
+                <a href="#" id="logo">
+                    <img src="img/logo-small.png" alt="logo">
+                </a>
+                <ul>
+                    <li><a href="">Perchè Dropbox?</a></li>
+                    <li><a href="">Funzioni</a></li>
+                    <li><a href="">Piani e prezzi</a></li>
+                </ul>
+            </div>
+            <div class="nav-dx">
+                <ul>
+                    <li><a href="">Supporto</a></li>
+                    <li><a href="">Contatta l'ufficio vendite</a></li>
+                    <li><a href="">Accedi</a></li>
+                    <a href="#" class="btn btn-blue">Inizia</a>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
     <!-- jumbotron / dare position relatinve - creare un titolo e sotto 2 colonne float left-->
     
