impo iniziali jumbotron

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 
     <!-- jumbotron / dare position relatinve - creare un titolo e sotto 2 colonne float left-->
     
+    <section class="jumbotron">
+        <div class="container-center">
+            
+        </div>
+    </section>
+
     <!-- section / dare sempre position relative - creare titolo - 3 colonne dimensioni uguali - parte finale altro div larghezza intera diviso in 2 col -->
 
     <!-- sezione a 2 col -->
