--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- font awesome -->
-    <link rel=“stylesheet” href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,7 +45,31 @@
     
     <section class="jumbotron">
         <div class="container-center">
-            
+            <h1>
+                Tutto ciò che ti serve per il lavoro, in un posto unico
+            </h1>
+            <div class="clearfix">
+                <div class="col-sx">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa labore esse consectetur commodi suscipit tempora, quae illum aliquam vero error rem, natus, ut incidunt dicta similique! Natus consequatur accusamus est!
+                    </p>
+                    <span>
+                        <a href="#" class="btn btn-blue">
+                            inizia la prova gratuita
+                        </a>
+
+                    </span> 
+                    <h6>
+                        annulla in qualsiasi momento
+                    </h6>
+                    <span>
+                        <i class="fas fa-arrow-down"></i>
+                    </span> 
+                </div>
+                <div class="col-dx">
+                    colonna dx
+                </div>
+            </div>
         </div>
     </section>
 
