--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
                     </span> 
                 </div>
                 <div class="col-dx">
-                    colonna dx
+                    <div>
+                        <img src="img/jumbo.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
