modifiche colonne prezzi

--- a/index.html
+++ b/index.html
@@ -98,15 +98,18 @@
                     <div class="head-col-price">
                         <i class="far fa-user"></i> <span>Singolo</span> 
                     </div>
-                    <h4>Professional</h4>
-                    <span class="price">19,99 €</span>
-                    <span class="month">/mese</span>
-                    
-                    <ul>
-                        <li><i class="far fa-user"></i> 1 utente</li>
-                        <li>3 TB di spazio di archiviazione sicuro</li>
-                        <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
-                    </ul>
+                    <div class="content-col-price">
+                        <h4>Professional</h4>
+                        <span class="price">19,99 €</span>
+                        <span class="month">/mese</span>
+                        
+                        <ul>
+                            <li><i class="far fa-user"></i> 1 utente</li>
+                            <li><i class="far fa-folder"></i>3 TB di spazio di archiviazione sicuro</li>
+                            <li><i class="fas fa-pencil-alt"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                        </ul>
+
+                    </div>
 
                 </div>
 
