corretti margini sezione colonne prezzi

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </div>
                 </div>
 
-                <div class="col-price">
+                <div id="col-price-middle" class="col-price">
                     <div class="head-col-price">
                         <i class="far fa-building"></i> <span>Team</span> 
                     </div>
