css sezione colonne rivisitato

--- a/index.html
+++ b/index.html
@@ -80,25 +80,23 @@
     <section id="dropbox-business-price">
         <div class="container-center smaller">
 
-            <div class="content">
-                <h2>
-                    Trova il tuo piano bussiness che fa per te
-                </h2>
-                <div class="radio-box">
-                    <input type="radio" id="fatturazione-mensile">
-                    <label for="fatturazione-mensile">fatturazione mensile</label>
+            <h2>
+                Trova il tuo piano bussiness che fa per te
+            </h2>
+            <div class="radio-box">
+                <input type="radio" id="fatturazione-mensile">
+                <label for="fatturazione-mensile">fatturazione mensile</label>
                     
-                    <input type="radio" id="fatturazione-mensile">
-                    <label for="fatturazione-mensile">fatturazione mensile</label>
-                </div>
+                <input type="radio" id="fatturazione-mensile">
+                <label for="fatturazione-mensile">fatturazione mensile</label>
             </div>
 
             <div class="clearfix">
                 <div class="col-price">
-                    <div class="head-col-price">
+                    <div class="head-col">
                         <i class="far fa-user"></i> <span>Singolo</span> 
                     </div>
-                    <div class="content-col-price">
+                    <div class="content-col">
                         <h4>Professional</h4>
                         <div><strong>19,99 €</strong></div>
                         <div>/mese</div>
@@ -125,10 +123,10 @@
                 </div>
 
                 <div id="col-price-middle" class="col-price">
-                    <div class="head-col-price">
+                    <div class="head-col">
                         <i class="far fa-building"></i> <span>Team</span> 
                     </div>
-                    <div class="content-col-price">
+                    <div class="content-col">
                         <h4>Standard</h4>
                         <div><strong>19,99 €</strong></div>
                         <div>/mese</div>
@@ -156,10 +154,10 @@
                 </div>
                 
                 <div class="col-price">
-                    <div class="head-col-price">
+                    <div class="head-col">
                         <i class="far fa-building"></i> <span>Team</span> 
                     </div>
-                    <div class="content-col-price">
+                    <div class="content-col">
                         <h4>Advenced</h4>
                         <div><strong>19,99 €</strong></div>
                         <div>/mese</div>
@@ -189,10 +187,10 @@
 
             <!-- colonna larghezza intera -->
             <div class="col-full">
-                <div class="head-col-price">
+                <div class="head-col">
                     <i class="far fa-building"></i> <span>Team</span> 
                 </div>
-                <div class="content-col-full">
+                <div class="content-col">
                     <div class="clearfix">
                         <div class="float-70">
                             <h4>Enterprice</h4>
@@ -206,7 +204,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
 
         </div>
