sistemato layout button e completata sezione 2 colonne

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
                     <img src="img/logo-small.png" alt="logo">
                 </a>
                 <ul>
-                    <li><a href="">Perchè Dropbox?</a></li>
-                    <li><a href="">Funzioni</a></li>
-                    <li><a href="">Piani e prezzi</a></li>
+                    <li><a href="#">Perchè Dropbox?</a></li>
+                    <li><a href="#">Funzioni</a></li>
+                    <li><a href="#">Piani e prezzi</a></li>
                 </ul>
             </div>
             <div class="nav-dx">
                 <ul>
-                    <li><a href="">Supporto</a></li>
-                    <li><a href="">Contatta l'ufficio vendite</a></li>
-                    <li><a href="">Accedi</a></li>
-                    <a href="#" class="btn btn-blue">Inizia</a>
+                    <li><a href="#">Supporto</a></li>
+                    <li><a href="#">Contatta l'ufficio vendite</a></li>
+                    <li><a href="#">Accedi</a></li>
+                    <li><a href="#" class="btn btn-blue">Inizia</a></li>
                 </ul>
             </div>
         </nav>
@@ -209,6 +209,18 @@
         </div>
     </section>
     <!-- sezione a 2 col -->
+    <section>
+        <div class="container-center smaller clearfix">
+            <div class="col-floatleft-50">
+                <img src="img/partner.png" alt="partner">
+            </div>
+            <div class="col-floatleft-50">
+                <h4>Entra in contatto con un partner Dropbox</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta blanditiis nemo neque quas libero, deleniti ullam minima quasi, esse magnam fuga repudiandae quod. Asperiores velit maiores odit? Nemo, eius voluptatem!</p>
+                <a href="#" class="btn">Trova un partner</a>
+            </div>
+        </div>
+    </section>
 
     <!-- sezione con titolo 2 righe a loro volta divise in 3 col -->
 
