--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </div>
                 </div>
 
-                <div id="col-price-middle" class="col-price">
+                <div class="col-price middle">
                     <div class="head-col">
                         <i class="far fa-building"></i> <span>Team</span> 
                     </div>
@@ -222,7 +222,79 @@
         </div>
     </section>
 
-    <!-- sezione con titolo 2 righe a loro volta divise in 3 col -->
+    <!-- sezione con titolo 2 righe a loro volta divise in 3 col con item-->
+    <section>
+        <div class="container-center smaller">
+            <h2>
+                Esegui più operazioni con Dropbox Business
+            </h2>
+            <div>
+                <div class="clearfix min-h">
+                    <div class="col-price">
+                        <div class="top-item">
+                            <img src="img/business-feature-switching-tools.png" alt="">
+                        </div>
+                        <div class="bottom-item">
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatibus tempore quasi perspiciatis similique dolor, illum dolorem cupiditate delectus doloremque ipsa aliquid dolore provident impedit ratione. Id obcaecati fuga eligendi?</p>
+                        </div>
+                    </div>
+                    <div class="col-price middle">
+                        <div class="top-item">
+                            <img src="img/business-feature-coordinate-it.png" alt="">
+                        </div>
+                        <div class="bottom-item">
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatibus tempore quasi perspiciatis similique dolor, illum dolorem cupiditate delectus doloremque ipsa aliquid dolore provident impedit ratione. Id obcaecati fuga eligendi?</p>
+                        </div>
+                    </div>
+                    <div class="col-price">
+                        <div class="top-item">
+                            <img src="img/business-feature-multi-device.png" alt="">
+                        </div>
+                        <div class="bottom-item">
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatibus tempore quasi perspiciatis similique dolor, illum dolorem cupiditate delectus doloremque ipsa aliquid dolore provident impedit ratione. Id obcaecati fuga eligendi?</p>
+                        </div>
+                    </div>
+                    
+                </div>
+
+                <div class="clearfix min-h">
+                    <div class="col-price">
+                        <div class="top-item">
+                            <img src="img/business-feature-integrations-it.png" alt="">
+                        </div>
+                        <div class="bottom-item">
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatibus tempore quasi perspiciatis similique dolor, illum dolorem cupiditate delectus doloremque ipsa aliquid dolore provident impedit ratione. Id obcaecati fuga eligendi?</p>
+                        </div>
+                    </div>
+                    <div class="col-price middle">
+                        <div class="top-item">
+                            <img src="img/business-feature-send-files-it.png" alt="">
+                        </div>
+                        <div class="bottom-item">
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatibus tempore quasi perspiciatis similique dolor, illum dolorem cupiditate delectus doloremque ipsa aliquid dolore provident impedit ratione. Id obcaecati fuga eligendi?</p>
+                        </div>
+                    </div>
+                    <div class="col-price">
+                        <div class="top-item">
+                            <img src="img/business-feature-security.png" alt="">
+                        </div>
+                        <div class="bottom-item">
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatibus tempore quasi perspiciatis similique dolor, illum dolorem cupiditate delectus doloremque ipsa aliquid dolore provident impedit ratione. Id obcaecati fuga eligendi?</p>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+
+    </section>
+
 
     <!-- sezione  carousel-->
 
