--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             </div>
         </div>
     </section>
-
+    
     <!-- sezione con titolo 2 righe a loro volta divise in 3 col con item-->
     <section>
         <div class="container-center smaller">
@@ -295,7 +295,13 @@
 
     </section>
 
-
+    <section>
+        <div class="container-center smaller">
+            <div class="half-widh">
+                <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+            </div>
+        </div>
+    </section>
     <!-- sezione  carousel-->
 
     <!-- sezione 2 col -->
