--- a/index.html
+++ b/index.html
@@ -303,7 +303,35 @@
         </div>
     </section>
     <!-- sezione  carousel-->
+    <section class="bg-gray clearfix">
 
+        <div class="carousel-aside">
+            <div class="row clearfix">
+                <div class="col-floatleft-50 green-svg">
+                    <img class="change-svg-color" src="img/designit.svg" alt="designit">
+                </div>
+                <div class="col-floatleft-50 darkred-svg">
+                    <img class="change-svg-color" src="img/arizona_state_university.svg" alt="arizona">
+                </div>
+            </div>
+        </div>
+
+        <div class="carousel-center">
+
+        </div>
+
+        <div class="carousel-aside">
+            <div class="row clearfix">
+                <div class="col-floatleft-50 green-svg">
+                    <img class="change-svg-color" src="img/world_bicycle_relief.svg" alt="designit">
+                </div>
+                <div class="col-floatleft-50 darkred-svg">
+                    <img class="change-svg-color" src="img/hearst_corp.svg" alt="arizona">
+                </div>
+            </div>
+        </div>
+
+    </section>
     <!-- sezione 2 col -->
 
     <!-- sezione accordion -->
