completati i lati del carousel

--- a/index.html
+++ b/index.html
@@ -314,19 +314,41 @@
                     <img class="change-svg-color" src="img/arizona_state_university.svg" alt="arizona">
                 </div>
             </div>
+
+            <div class="row clearfix">
+                <div class="col-floatleft-50 darkazul-svg">
+                    <img class="change-svg-color" src="img/university_of_florida.svg" alt="designit">
+                </div>
+                <div class="col-floatleft-50 flashred-svg">
+                    <img class="change-svg-color" src="img/topps.svg" alt="arizona">
+                </div>
+            </div>
+
         </div>
 
         <div class="carousel-center">
-
+            <div class="item-carousel">
+                <img src="img/designit.svg" alt="">
+            </div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil impedit totam similique quibusdam excepturi iste perferendis ut placeat voluptatum animi! Illo, vitae? Quisquam debitis eligendi, rerum temporibus omnis ut possimus!
         </div>
 
         <div class="carousel-aside">
             <div class="row clearfix">
-                <div class="col-floatleft-50 green-svg">
+                <div class="col-floatleft-50 red-svg">
                     <img class="change-svg-color" src="img/world_bicycle_relief.svg" alt="designit">
                 </div>
-                <div class="col-floatleft-50 darkred-svg">
+                <div class="col-floatleft-50 azul-svg">
                     <img class="change-svg-color" src="img/hearst_corp.svg" alt="arizona">
+                </div>
+            </div>
+
+            <div class="row clearfix">
+                <div class="col-floatleft-50 blue-svg">
+                    <img class="change-svg-color" src="img/lonely_planet.svg" alt="designit">
+                </div>
+                <div class="col-floatleft-50 yellow-svg">
+                    <img class="change-svg-color" src="img/clear_channel.svg" alt="arizona">
                 </div>
             </div>
         </div>
