carousel completo con overflow: scroll

--- a/index.html
+++ b/index.html
@@ -328,9 +328,13 @@
 
         <div class="carousel-center">
             <div class="item-carousel">
-                <img src="img/designit.svg" alt="">
+                <img src="img/designit.svg" alt="designit">
             </div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil impedit totam similique quibusdam excepturi iste perferendis ut placeat voluptatum animi! Illo, vitae? Quisquam debitis eligendi, rerum temporibus omnis ut possimus!
+                <hr>
+            <div class="item-text-carousel">
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates sed consequuntur ut recusandae, asperiores corporis impedit assumenda vitae corrupti perferendis atque ducimus blanditiis. Quasi optio maxime adipisci libero? Quae, non? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem libero unde modi dolorum. Earum et repellendus ducimus quis provident sequi cumque facilis? Ea dolores autem necessitatibus cupiditate animi neque tempore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit facere quas ipsa dolore nesciunt, ut molestias quidem, explicabo perspiciatis provident soluta quo? Architecto tempore, modi totam magnam dicta eius? Veritatis."</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+            </div>
         </div>
 
         <div class="carousel-aside">
