--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- jumbotron / dare position relatinve - creare un titolo e sotto 2 colonne float left-->
     
-    <section class="jumbotron">
+    <section class="jumbotron bg-azul">
         <div class="container-center">
             <h1>
                 Tutto ciò che ti serve per il lavoro, in un posto unico
@@ -359,7 +359,16 @@
 
     </section>
     <!-- sezione 2 col -->
-
+    <section id="contact" class="bg-azul">
+        <div class="container-center smaller clearfix">
+            <div class="float-70">
+                <h2>Porta Dropbox Business nella tua azienda.</h2>
+            </div>
+            <div class="float-30">
+                <a href="#" class="btn btn-white">Inizia la tua prova gratuita</a>
+            </div>
+        </div>
+    </section>
     <!-- sezione accordion -->
 
     <!-- footer -->
