Evvetto on hover navbar

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         </div>
 
     </section>
-    <!-- sezione 2 col -->
+    <!-- sezione 2 col contatti-->
     <section id="contact" class="bg-azul">
         <div class="container-center smaller clearfix">
             <div class="float-70">
