--- a/index.html
+++ b/index.html
@@ -370,6 +370,14 @@
         </div>
     </section>
     <!-- sezione accordion -->
+    <section id="accordion">
+        <div class="container-center smaller">
+            <h2>Domande frequenti</h2>
+            <div class="faq">
+                <h5>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h5>
+            </div>
+        </div>
+    </section>
 
     <!-- footer -->
 
