--- a/index.html
+++ b/index.html
@@ -373,8 +373,36 @@
     <section id="accordion">
         <div class="container-center smaller">
             <h2>Domande frequenti</h2>
+            <!-- div faq che si ripete -->
             <div class="faq">
                 <h5>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h5>
+                <div class="faq-icon">
+                    <i class="fas fa-angle-down"></i>
+                </div>
+            </div>
+
+            <!-- div faq che si ripete -->
+            <div class="faq">
+                <h5>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h5>
+                <div class="faq-icon">
+                    <i class="fas fa-angle-down"></i>
+                </div>
+            </div>
+
+            <!-- div faq che si ripete -->
+            <div class="faq">
+                <h5>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h5>
+                <div class="faq-icon">
+                    <i class="fas fa-angle-down"></i>
+                </div>
+            </div>
+
+            <!-- div faq che si ripete -->
+            <div class="faq">
+                <h5>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h5>
+                <div class="faq-icon">
+                    <i class="fas fa-angle-down"></i>
+                </div>
             </div>
         </div>
     </section>
