--- a/index.html
+++ b/index.html
@@ -408,7 +408,69 @@
     </section>
 
     <!-- footer -->
+    <footer>
+        <div class="container-center">
+            <div class="clearfix">
+                <div class="col-footer">
+                    <h5>Dropbox</h5>
+                    <ul>
+                        <li>Applicazione Desktop</li>
+                        <li>Perchè Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
 
+                <div class="col-footer">
+                    <h5>Prodotti</h5>
+                    <ul>
+                        <li>Applicazione Desktop</li>
+                        <li>Perchè Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+
+                <div class="col-footer">
+                    <h5>Azienda</h5>
+                    <ul>
+                        <li>Applicazione Desktop</li>
+                        <li>Perchè Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+
+                <div class="col-footer">
+                    <h5>Supporto</h5>
+                    <ul>
+                        <li>Applicazione Desktop</li>
+                        <li>Perchè Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+
+                <div class="col-footer">
+                    <h5>Comunity</h5>
+                    <ul>
+                        <li>Applicazione Desktop</li>
+                        <li>Perchè Dropbox</li>
+                        <li>Piani</li>
+                    </ul>
+                </div>
+
+            </div>
+            <hr>
+            <div >
+                <i class="fas fa-globe-europe">Italiano<i class="fas fa-caret-up"></i></i>
+            </div>
+        </div>
+    </footer>
 
 
 </body>
