effetto hover su accordion aggiunto

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -380,7 +380,11 @@
                 <div class="faq-icon">
                     <i class="fas fa-angle-down"></i>
                 </div>
+                <div class="answer">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ipsam necessitatibus nemo quidem ipsa est temporibus architecto fugiat blanditiis asperiores quia eos, non consequuntur impedit rem officiis itaque expedita delectus!</p>
+                </div>
             </div>
+
         
             <!-- div faq che si ripete -->
             <div class="faq">
