--- a/bonus/index.html
+++ b/bonus/index.html
@@ -392,13 +392,8 @@
                 <div class="faq-icon">
                     <i class="fas fa-angle-down"></i>
                 </div>
-            </div>
-
-            <!-- div faq che si ripete -->
-            <div class="faq">
-                <h5>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h5>
-                <div class="faq-icon">
-                    <i class="fas fa-angle-down"></i>
+                <div class="answer">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ipsam necessitatibus nemo quidem ipsa est temporibus architecto fugiat blanditiis asperiores quia eos, non consequuntur impedit rem officiis itaque expedita delectus!</p>
                 </div>
             </div>
 
@@ -407,6 +402,20 @@
                 <h5>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h5>
                 <div class="faq-icon">
                     <i class="fas fa-angle-down"></i>
+                </div>
+                <div class="answer">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ipsam necessitatibus nemo quidem ipsa est temporibus architecto fugiat blanditiis asperiores quia eos, non consequuntur impedit rem officiis itaque expedita delectus!</p>
+                </div>
+            </div>
+
+            <!-- div faq che si ripete -->
+            <div class="faq">
+                <h5>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h5>
+                <div class="faq-icon">
+                    <i class="fas fa-angle-down"></i>
+                </div>
+                <div class="answer">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ipsam necessitatibus nemo quidem ipsa est temporibus architecto fugiat blanditiis asperiores quia eos, non consequuntur impedit rem officiis itaque expedita delectus!</p>
                 </div>
             </div>
         </div>
