arrow funzionante nella sezione accordion

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -379,6 +379,7 @@
                 <h5>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h5>
                 <div class="faq-icon">
                     <i class="fas fa-angle-down"></i>
+                    <i class="fas fa-angle-up"></i>
                 </div>
                 <div class="answer">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ipsam necessitatibus nemo quidem ipsa est temporibus architecto fugiat blanditiis asperiores quia eos, non consequuntur impedit rem officiis itaque expedita delectus!</p>
@@ -391,6 +392,7 @@
                 <h5>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h5>
                 <div class="faq-icon">
                     <i class="fas fa-angle-down"></i>
+                    <i class="fas fa-angle-up"></i>
                 </div>
                 <div class="answer">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ipsam necessitatibus nemo quidem ipsa est temporibus architecto fugiat blanditiis asperiores quia eos, non consequuntur impedit rem officiis itaque expedita delectus!</p>
@@ -402,6 +404,7 @@
                 <h5>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h5>
                 <div class="faq-icon">
                     <i class="fas fa-angle-down"></i>
+                    <i class="fas fa-angle-up"></i>
                 </div>
                 <div class="answer">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ipsam necessitatibus nemo quidem ipsa est temporibus architecto fugiat blanditiis asperiores quia eos, non consequuntur impedit rem officiis itaque expedita delectus!</p>
@@ -413,6 +416,7 @@
                 <h5>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h5>
                 <div class="faq-icon">
                     <i class="fas fa-angle-down"></i>
+                    <i class="fas fa-angle-up"></i>
                 </div>
                 <div class="answer">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ipsam necessitatibus nemo quidem ipsa est temporibus architecto fugiat blanditiis asperiores quia eos, non consequuntur impedit rem officiis itaque expedita delectus!</p>
