tag a del footer aggiunti

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -432,53 +432,53 @@
                 <div class="col-footer">
                     <h5>Dropbox</h5>
                     <ul>
-                        <li>Applicazione Desktop</li>
-                        <li>Perchè Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
+                        <li><a href="#">Desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
                     </ul>
                 </div>
 
                 <div class="col-footer">
                     <h5>Prodotti</h5>
                     <ul>
-                        <li>Applicazione Desktop</li>
-                        <li>Perchè Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
+                        <li><a href="#">Desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
                     </ul>
                 </div>
 
                 <div class="col-footer">
                     <h5>Azienda</h5>
                     <ul>
-                        <li>Applicazione Desktop</li>
-                        <li>Perchè Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
+                        <li><a href="#">Desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
                     </ul>
                 </div>
 
                 <div class="col-footer">
                     <h5>Supporto</h5>
                     <ul>
-                        <li>Applicazione Desktop</li>
-                        <li>Perchè Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
+                        <li><a href="#">Desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
                     </ul>
                 </div>
 
                 <div class="col-footer">
                     <h5>Comunity</h5>
                     <ul>
-                        <li>Applicazione Desktop</li>
-                        <li>Perchè Dropbox</li>
-                        <li>Piani</li>
+                        <li><a href="#">Desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
                     </ul>
                 </div>
 
