--- a/bonus/index.html
+++ b/bonus/index.html
@@ -32,7 +32,19 @@
             </div>
             <div class="nav-dx">
                 <ul>
-                    <li><a href="#">Supporto</a></li>
+                    <li>
+                        <a href="#">
+                            Supporto
+                            <i class="fas fa-angle-down"></i>
+                            <div class="hidden-nav">
+                                <ul>
+                                    <li><a href="#">Dropbox?</a></li>
+                                    <li><a href="#">Funzioni</a></li>
+                                </ul>
+
+                            </div>
+                        </a>
+                    </li>
                     <li><a href="#">Contatta l'ufficio vendite</a></li>
                     <li><a href="#">Accedi</a></li>
                     <li><a href="#" class="btn btn-blue">Inizia</a></li>
