aggiunto collegamento ling nella sezione jumbo

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -76,7 +76,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa labore esse consectetur commodi suscipit tempora, quae illum aliquam vero error rem, natus, ut incidunt dicta similique! Natus consequatur accusamus est!
                     </p>
                     <span>
-                        <a href="#" class="btn btn-blue">
+                        <a href="#dropbox-business-price" class="btn btn-blue">
                             inizia la prova gratuita
                         </a>
 
@@ -85,7 +85,9 @@
                         annulla in qualsiasi momento
                     </h6>
                     <span>
-                        <i class="fas fa-arrow-down"></i>
+                        <a href="#dropbox-business-price">
+                            <i class="fas fa-arrow-down"></i>
+                        </a>
                     </span> 
                 </div>
                 <div class="col-dx">
