aggiunti fake radiobox

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -108,10 +108,16 @@
                 Trova il tuo piano bussiness che fa per te
             </h2>
             <div class="radio-box">
-                <input type="radio" id="fatturazione-mensile">
+                <!-- fake radiobox -->
+                <div class="fake-radiobox">
+                    <div class="radiobox-selected"></div>
+                </div>
                 <label for="fatturazione-mensile">fatturazione mensile</label>
-                    
-                <input type="radio" id="fatturazione-mensile">
+                
+                <!-- fake radiobox -->
+                <div class="fake-radiobox">
+                    <div class="radiobox-selected"></div>
+                </div>
                 <label for="fatturazione-mensile">fatturazione mensile</label>
             </div>
 
