aggiunto bordo al box verde del carousel senza collasso

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -338,6 +338,9 @@
         <div class="carousel-aside">
             <div class="row clearfix">
                 <div class="col-floatleft-50 green-svg">
+                    <div class="border">
+                        
+                    </div>
                     <img class="change-svg-color" src="img/designit.svg" alt="designit">
                 </div>
                 <div class="col-floatleft-50 darkred-svg">
