--- a/bonus/index.html
+++ b/bonus/index.html
@@ -337,10 +337,7 @@
 
         <div class="carousel-aside">
             <div class="row clearfix">
-                <div class="col-floatleft-50 green-svg">
-                    <div class="border">
-                        
-                    </div>
+                <div class="col-floatleft-50 green-svg border">
                     <img class="change-svg-color" src="img/designit.svg" alt="designit">
                 </div>
                 <div class="col-floatleft-50 darkred-svg">
