--- a/bonus/index.html
+++ b/bonus/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="nav-dx">
                 <ul>
-                    <li>
+                    <li class="clearfix">
                         <a href="#">
                             Supporto
                             <i class="fas fa-angle-down"></i>
@@ -44,7 +44,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="clearfix">
                         <a href="#">
                             Contatta l'ufficio vendite
                             <i class="fas fa-angle-down"></i>
