--- a/bonus/index.html
+++ b/bonus/index.html
@@ -37,10 +37,12 @@
                             Supporto
                             <i class="fas fa-angle-down"></i>
                             <div class="hidden-nav">
+
                                 <ul>
                                     <li><a href="#">Dropbox?</a></li>
                                     <li><a href="#">Funzioni</a></li>
                                 </ul>
+                                
                             </div>
                         </a>
                     </li>
@@ -57,7 +59,7 @@
                         </a>
                     </li>
                     <li><a href="#">Accedi</a></li>
-                    <li><a href="#" class="btn btn-blue">Inizia</a></li>
+                    <li><a id="start" href="#" class="btn btn-blue">Inizia</a></li>
                 </ul>
             </div>
         </nav>
